--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reverb-calculator",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,15 +11,21 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "main": "electron-starter.js",
   "scripts": {
     "start": "react-scripts start",
     "start-app": "electron .",
+    "build-css": "npx tailwindcss -o src/tailwind.output.css --minify", 
+    "prebuild": "npm run build-css",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
